# botfed-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
botfed/: logger.py
botfed/aero/: clm_active_liq_history.py  clm_eval_pool.py  clm_get_volumes.py  clm_pool_rank.py  clm_pool_rank_pio.py  fetch_price_vol.py  get_fees.py  get_minted_positions.py  get_nft_events.py  get_nfts.py  get_tokens.py  get_transfers.py  helpers.py  liq_share.py  pos_history.py  positions.py  vars.py
botfed/backfill/: backfill_uni.py  bin_backfill_spot_1d.py  binance_backfill_perps.py  binance_backfill_spot.py  binance_common.py  binance_markets.py  binance_ohlcv_perps.py  binance_ohlcv_spot.py  local_data.py
botfed/binance/: deposit.py  ds_feed_handler.py  equity_rebuild.py  exchange_state.py  feed.py  liquidations.py  markouts.py  markouts_tardis.py  ob_full.py  oexec.py  oms.py  order_book.py  partial_depth_feed.py  portfolio_executor.py  price_snapshots.py  trade_feed.py  universe.py  user_feed.py  utils.py  visualize_account.py  withdraw.py  ws_listener.py
botfed/core/: __init__.py  block_feed.py  block_listener.py  eth_config.py  event_loop.py  exchange_state_factory.py  exchange_states.py  explorer_client.py  fast_bbo.py  fast_bbo_feed.py  feed.py  feed_writer.py  kline.py  oexec.py  oms.py  order_book.py  producer.py  rcp.py  shared_memory.py  shm_circ_buffer.py  shm_constants.py  shm_utils.py  signal_and_stop.py  ssl_context.py  time.py  timer_feed.py  websocket_mngr.py
botfed/etherscan/: get_transfers.py
botfed/hyperliquid/: abis.py  (+32 more)
noteboooks/: HedgeHLPnL.ipynb
(+41 files in other folders)
