[project]
name = "botfed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.2",
    "dotenv>=0.9.9",
    "eth-account>=0.13.7",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-binance>=1.0.29",
    "statsmodels>=0.14.5",
    "web3>=7.13.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Tell hatchling exactly which package directory to ship
[tool.hatch.build.targets.wheel]
packages = ["botfed"]

[tool.uv]
dev-dependencies = [
  "ipykernel",
  "pytest",
]
